# jupyter-KULeuven-slides

./: .gitignore  KULeuven 1425 test.ipynb  KULeuven 1425 test.slides.html  KULeuven slides test.ipynb  KULeuven slides test.slides.html  LICENSE  MANIFEST.in  README.md  SECURITY.md  Sedes KULeuven slides test.ipynb  Sedes KULeuven slides test.slides.html  pyproject.toml  requirements.txt  setup.cfg  test_export.py  tox.ini
.github/: CODEOWNERS  README.md
.github/workflows/: check.yml
background tests/: 1425-outline.html  1425-title.html  normal-outline.html  normal-slide.html  normal-title.html  sedes-outline.html  sedes-slide.html  sedes-title.html
nbconvert_styles/: __init__.py
nbconvert_styles/KULeuven/: base.html.j2  conf.json  index.html.j2
nbconvert_styles/KUleuven/: KULeuven.css  LICENSING  base.html.j2  index.html.j2
