[metadata]
name = jupyter-KULeuven-slides
version = 0.2.4
author = Jan Genoe
author_email = jan.genoe@kuleuven.be
description = A minimal and pip-installable jupyter nbconvert template for KULeuven slides.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/KULeuven-Diepenbeek/jupyter-KULeuven-slides
license = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = nbconvert_styles
python_requires = >=3.7
install_requires =
    jupyter
    nbconvert ==6.5.3
include_package_data = True

[options.entry_points]
nbconvert.exporters =
    KULeuven = nbconvert_styles:KULeuvenExporter
